add assginment in flight

--- a/flight.html
+++ b/flight.html
@@ -95,6 +95,12 @@
                 <button type="submit" class="btn btn-success">submit</button>
             </div>
         </form>
+
+        <div>
+            // show content listflight(mock up flight)
+            // ดึงข้อมูลจากหน้า listflight แสดงเป็นตาราง 
+            // หน้า listflight เขียนscript เป็น json และแสดงในตาราง
+        </div>
     </div>
 </body>
 
