--- a/public/flight.html
+++ b/public/flight.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style-for-searchFlights.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                     <input type="radio" name="optradio" checked>Round Trip</label>
             </div>
         </div>
-        <div class="col-sm-12">
+        <div class="row">
 
             <div class="col-sm-6">
                 <div class="form-group">
@@ -29,15 +30,16 @@
                     <input type="text" placeholder="From City" class="form-control" id="form">
                 </div>
                 <div class="col-sm-12 ">
-                    <div class="col-sm-8">
+                    <div class="col-sm-6">
                         <label>Departing Airport</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <select class="form-control" id="sel1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
+                            <option>Suvarnabhumi Airport</option>
+                            <option>Singapore Changi</option>
+                            <option>Incheon</option>
+                            <option>Auckland</option>
+                        </select>
                         </select>
                     </div>
                 </div>
@@ -63,35 +65,36 @@
                 </div>
                 <div class="col-sm-12 ">
 
-                    <div class="col-sm-8">
+                    <div class="col-sm-6">
                         <label>Destination Airport</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <select class="form-control" id="sel1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
+                            <option>Suvarnabhumi Airport</option>
+                            <option>Singapore Changi</option>
+                            <option>Incheon</option>
+                            <option>Auckland</option>
                         </select>
                     </div>
                 </div>
                 <div class="col-sm-12 ">
-                    <div class="col-sm-8">
+                    <div class="col-sm-6">
                         <label>Travels class</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <select class="form-control" id="sel1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
+                            <option>Business Class</option>
+                            <option>First Class</option>
+                            <option>Econimic</option>
                         </select>
                     </div>
                 </div>
             </div>
         </div>
-        <div>
-            <button id="submit" type="submit" class="btn btn-success">submit</button>
+        <div class="row">
+            <div class="col-sm-4">
+                <button id="submit" type="submit" class="btn btn-success">submit</button>
+            </div>
         </div>
 
         <div id="display"></div>
