fixed requirement to static code from P'Patch

--- a/public/flight.html
+++ b/public/flight.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style-for-searchFlights.css">
+    <link rel="stylesheet" href="/style-for-searchFlights.css">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <button id="submit" type="submit" class="btn btn-success">submit</button>
+                <a href="/JS4/listFlights.html" id="submit" type="submit" class="btn btn-success">submit</a>
             </div>
         </div>
 
