--- a/public/listflight-listview.html
+++ b/public/listflight-listview.html
@@ -15,15 +15,15 @@
     <div class="container-fluid">
         <h1> Display </h1>
         <ul class="nav nav-tabs">
-            <li>
+            <li class="active">
                 <a href="/JS4/listFlights.html">List View</a>
             </li>
-            <li class="active">
+            <li>
                 <a href="/JS4/displayFlights.html">Matrix View</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div id="home" class="tab-pane fade">
+            <div id="home" class="tab-pane fade in active">
                 <!-- <h3>List View</h3>
                 <table class="table table-hover"> -->
                 <!-- <thead>
@@ -54,7 +54,7 @@
                     </thead>
                 </table>
             </div> -->
-            <div id="menu1" class="tab-pane fade in active">
+            <div id="menu1" class="tab-pane fade">
                 <h3>Matrix View</h3>
                 <span class="badge" id="flights-badge">1</span>
                 <a> of
